@@ -1,3 +1,6 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA1
+
 AUX 2.6-isnumber.patch 861 RMD160 9354385fd0838cd8c9b43f8dcfc3c0b3547858de SHA1 942081f1adf828e5f1444f8c7edeb46fa8c1edb8 SHA256 b38b263324b06de3d57e4d9e30f04da411821ed97fa8f95b1c4832bdd43b5463
 MD5 527f6d401d12741d17a7ac7761a6d2d7 files/2.6-isnumber.patch 861
 RMD160 9354385fd0838cd8c9b43f8dcfc3c0b3547858de files/2.6-isnumber.patch 861
@@ -42,19 +45,34 @@ AUX cpio-2.6-writeOutHeaderBufferOverflow.patch 18611 RMD160 f5424c6e3c39a257873
 MD5 8e7b24c3c6b13e2228034d738bc9732b files/cpio-2.6-writeOutHeaderBufferOverflow.patch 18611
 RMD160 f5424c6e3c39a2578737165dbbb6276de880eb45 files/cpio-2.6-writeOutHeaderBufferOverflow.patch 18611
 SHA256 aed95b698c91951063371bcf524bc0f15b31fe9d967519b0043a886995368f69 files/cpio-2.6-writeOutHeaderBufferOverflow.patch 18611
-DIST cpio-2.6.tar.bz2 448452
+DIST cpio-2.6.tar.bz2 448452 RMD160 52b7e21c9989dd28da5dae1630b57a301817a788 SHA1 4f65821ec10eb2c330a582fbc8112960c9849ecd SHA256 6e60c5c370d451605fcb23e26cc37c18182f62009282ca73bf5dea4519e17360
+DIST cpio-2.7.tar.bz2 698221 RMD160 0ae35717237133da5bba18376af0ec685ac67360 SHA1 ce1c8ab703d62fc1d30ca59e044ba9f43c3db574 SHA256 b59390450233b5298d210f6369e98d91d07b7f4261ddb962d654185dd02b5b0e
 EBUILD cpio-2.6-r5.ebuild 1657 RMD160 81af7eb5085f843450aa6b8411ac217c5664a0b9 SHA1 42d5915475b282d10a6fa2070b175c18b87cb5fb SHA256 188a1a2724318611c70d330bc38f77470efa3069f6f94b199fcf53da3dc85fab
 MD5 6434cda4341f9caae84431e741c60c2e cpio-2.6-r5.ebuild 1657
 RMD160 81af7eb5085f843450aa6b8411ac217c5664a0b9 cpio-2.6-r5.ebuild 1657
 SHA256 188a1a2724318611c70d330bc38f77470efa3069f6f94b199fcf53da3dc85fab cpio-2.6-r5.ebuild 1657
-MISC ChangeLog 8003 RMD160 20403415d2ebe430678685bde5af5ca764fee4f2 SHA1 0d6495ae1508d1018524c115f8453b8ce8256848 SHA256 b12d2ca9b62943646bbb8975463cc36b4bca4ab814f465521537c4df37952abd
-MD5 028d5b679ade83a562428666bcbe59c2 ChangeLog 8003
-RMD160 20403415d2ebe430678685bde5af5ca764fee4f2 ChangeLog 8003
-SHA256 b12d2ca9b62943646bbb8975463cc36b4bca4ab814f465521537c4df37952abd ChangeLog 8003
+EBUILD cpio-2.7.ebuild 957 RMD160 cd27b888f19d2076d8d2c3e7b35b6ee7c315d29f SHA1 4c37cbbb6181aadbd231c5c03cc9d3c18c9dfc37 SHA256 c4ac62b18ac732ab121c485fb7ea2e6787abae641cfd2e9c83262de03c6897cf
+MD5 2e4f9458756d84e82a570bacd3db8a1b cpio-2.7.ebuild 957
+RMD160 cd27b888f19d2076d8d2c3e7b35b6ee7c315d29f cpio-2.7.ebuild 957
+SHA256 c4ac62b18ac732ab121c485fb7ea2e6787abae641cfd2e9c83262de03c6897cf cpio-2.7.ebuild 957
+MISC ChangeLog 8111 RMD160 6fbf9bc7f331f8e5244fcd871f6a7acf75cec2ba SHA1 213bd2a5649165b18c819f03655d5a6623e96d41 SHA256 5b953ed1ccb8c93147e70f0b93861aba7d15448cd9102996067490c8fdcfd9fe
+MD5 00fc2d2bf3c625a8c4a7402541115c57 ChangeLog 8111
+RMD160 6fbf9bc7f331f8e5244fcd871f6a7acf75cec2ba ChangeLog 8111
+SHA256 5b953ed1ccb8c93147e70f0b93861aba7d15448cd9102996067490c8fdcfd9fe ChangeLog 8111
 MISC metadata.xml 164 RMD160 f43cbec30b7074319087c9acffdb9354b17b0db3 SHA1 9c213f5803676c56439df3716be07d6692588856 SHA256 f5f2891f2a4791cd31350bb2bb572131ad7235cd0eeb124c9912c187ac10ce92
 MD5 9a09f8d531c582e78977dbfd96edc1f2 metadata.xml 164
 RMD160 f43cbec30b7074319087c9acffdb9354b17b0db3 metadata.xml 164
 SHA256 f5f2891f2a4791cd31350bb2bb572131ad7235cd0eeb124c9912c187ac10ce92 metadata.xml 164
-MD5 898f15e2e1a554916e69e9397f130e81 files/digest-cpio-2.6-r5 61
-RMD160 5270033e70c315bfc74f3435f3280daf5b14462c files/digest-cpio-2.6-r5 61
-SHA256 5a7e7cd8661f79240ec3e12cf79fd0b38180acfe689f9aea09bb0083a04aa015 files/digest-cpio-2.6-r5 61
+MD5 bef54a4a4a27985f98e3bbbf5e60be49 files/digest-cpio-2.6-r5 229
+RMD160 d4edaf1f65000fc94e922b3db987e3d488936ea8 files/digest-cpio-2.6-r5 229
+SHA256 6052e569e0bd559ae4cc8b4173a48f2d0ee7a754d0ec19b67e5a9bdda3ce0266 files/digest-cpio-2.6-r5 229
+MD5 ac5c998994855bb75aa7658b7eb64966 files/digest-cpio-2.7 229
+RMD160 9552f623fc8ba0f30a5a3ccfe46faf79c34d68bf files/digest-cpio-2.7 229
+SHA256 0e78bc2601b3919276568d6f1ab37939cc6b5d91d2ec5da21efa141aab888f4b files/digest-cpio-2.7 229
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v1.4.5 (GNU/Linux)
+
+iD8DBQFFOpi8amhnQswr0vIRAkdWAJ9d7S15VOlrJZuKgeoz2iEU+ue1QQCgknak
+FMDTrIojY3c5GO+E+Aiv7as=
+=00Er
+-----END PGP SIGNATURE-----
