@@ -1,1 +1,3 @@
 MD5 25e0e8725bc60ed3460c9cde92752674 cpio-2.6.tar.bz2 448452
+RMD160 52b7e21c9989dd28da5dae1630b57a301817a788 cpio-2.6.tar.bz2 448452
+SHA256 6e60c5c370d451605fcb23e26cc37c18182f62009282ca73bf5dea4519e17360 cpio-2.6.tar.bz2 448452
