@@ -1,0 +1,3 @@
+MD5 69ad6cb3d288aafe5f969f68d9fd0fb7 cpio-2.7.tar.bz2 698221
+RMD160 0ae35717237133da5bba18376af0ec685ac67360 cpio-2.7.tar.bz2 698221
+SHA256 b59390450233b5298d210f6369e98d91d07b7f4261ddb962d654185dd02b5b0e cpio-2.7.tar.bz2 698221
