@@ -1,6 +1,11 @@
 # ChangeLog for app-arch/cpio
 # Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/app-arch/cvs-repo/gentoo-x86/app-arch/cpio/ChangeLog,v 1.49 2006/10/17 11:47:52 uberlord Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/app-arch/cvs-repo/gentoo-x86/app-arch/cpio/ChangeLog,v 1.50 2006/10/21 22:00:54 vapier Exp $
+
+*cpio-2.7 (21 Oct 2006)
+
+  21 Oct 2006; Mike Frysinger <vapier@gentoo.org> +cpio-2.7.ebuild:
+  Version bump.
 
   17 Oct 2006; Roy Marples <uberlord@gentoo.org> cpio-2.6-r5.ebuild:
   Added ~sparc-fbsd keyword.
